Removed Brand component and fixed copyright component sample alignment.

--- a/src/components/Copyright/Copyright.scss
+++ b/src/components/Copyright/Copyright.scss
@@ -1,6 +1,8 @@
 @import 'theme/colors';
 
-
+.copyright {
+  width: 100%;
+}
 
 /* ========== Media Queries ========== */
 @media only screen and (max-width: 414px) {
