--- a/src/components/SampleBox/SampleBox.scss
+++ b/src/components/SampleBox/SampleBox.scss
@@ -20,6 +20,10 @@
       justify-content: center;
       flex-wrap: wrap;
 
+      .copyright {
+        text-align: center;
+      }
+
       button {
         margin: 0.25rem;
       }
